kustomizations/media/dashboard/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  selector:
    app: homepage
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
